--- a/YoursMine/YoursMine/니꺼사기/BuyingTab.storyboard
+++ b/YoursMine/YoursMine/니꺼사기/BuyingTab.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2dA-Zf-E80">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2dA-Zf-E80">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -207,13 +207,32 @@
                     <view key="view" contentMode="scaleToFill" id="J45-TX-XGp">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7cd-50-6p0">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" name="LightYellowColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="0Ju-Tj-iwu" id="nFY-gA-s7d"/>
+                                    <outlet property="delegate" destination="0Ju-Tj-iwu" id="Dom-Ig-biP"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="7cd-50-6p0" firstAttribute="top" secondItem="JRO-r0-slQ" secondAttribute="top" id="0HY-Zq-Sj8"/>
+                            <constraint firstItem="7cd-50-6p0" firstAttribute="leading" secondItem="J45-TX-XGp" secondAttribute="leading" id="bHQ-Q7-L1R"/>
+                            <constraint firstAttribute="trailing" secondItem="7cd-50-6p0" secondAttribute="trailing" id="jqJ-52-imt"/>
+                            <constraint firstItem="JRO-r0-slQ" firstAttribute="bottom" secondItem="7cd-50-6p0" secondAttribute="bottom" id="qbm-MH-gew"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="JRO-r0-slQ"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="7cd-50-6p0" id="osK-IL-kmA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xOc-Df-SNi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1303" y="360"/>
+            <point key="canvasLocation" x="1302.8985507246377" y="359.59821428571428"/>
         </scene>
         <!--Lessons List Controller-->
         <scene sceneID="ue6-mW-Uwg">
@@ -222,9 +241,28 @@
                     <view key="view" contentMode="scaleToFill" id="hbO-jq-Jga">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sW9-yw-vwd">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <color key="backgroundColor" name="LightYellowColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="8VI-Xh-NDC" id="knZ-Fu-nak"/>
+                                    <outlet property="delegate" destination="8VI-Xh-NDC" id="i66-os-LPm"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="pXK-I9-n56" firstAttribute="trailing" secondItem="sW9-yw-vwd" secondAttribute="trailing" id="KMO-Hu-Uhb"/>
+                            <constraint firstItem="sW9-yw-vwd" firstAttribute="leading" secondItem="hbO-jq-Jga" secondAttribute="leading" id="b3D-vX-fuD"/>
+                            <constraint firstItem="sW9-yw-vwd" firstAttribute="top" secondItem="pXK-I9-n56" secondAttribute="top" id="oO5-LP-26U"/>
+                            <constraint firstAttribute="bottom" secondItem="sW9-yw-vwd" secondAttribute="bottom" id="twc-tt-w3q"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="pXK-I9-n56"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="sW9-yw-vwd" id="h1w-5f-gXc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gzj-Ww-2xT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -237,9 +275,24 @@
                     <view key="view" contentMode="scaleToFill" id="F2o-O5-bhl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Ku-hi-JNY">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <color key="backgroundColor" name="LightYellowColor"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Ku-hi-JNY" firstAttribute="top" secondItem="Bqo-ea-Meq" secondAttribute="top" id="4fz-Jp-HNN"/>
+                            <constraint firstItem="6Ku-hi-JNY" firstAttribute="leading" secondItem="Bqo-ea-Meq" secondAttribute="leading" id="JGl-J8-5wr"/>
+                            <constraint firstAttribute="trailing" secondItem="6Ku-hi-JNY" secondAttribute="trailing" id="T6i-hs-RLF"/>
+                            <constraint firstAttribute="bottom" secondItem="6Ku-hi-JNY" secondAttribute="bottom" id="aCA-SH-tY0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Bqo-ea-Meq"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="6Ku-hi-JNY" id="RYo-Q5-FXy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K9A-fb-Zuq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -252,18 +305,37 @@
                     <view key="view" contentMode="scaleToFill" id="yhj-Sb-EWD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tGW-oA-Lyl">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <color key="backgroundColor" name="LightYellowColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="7Jz-5D-EnO" id="hVs-lT-6dQ"/>
+                                    <outlet property="delegate" destination="7Jz-5D-EnO" id="ceh-ef-pu7"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="tGW-oA-Lyl" firstAttribute="top" secondItem="hfK-iK-DKF" secondAttribute="top" id="6hE-Z0-SEs"/>
+                            <constraint firstAttribute="trailing" secondItem="tGW-oA-Lyl" secondAttribute="trailing" id="M1M-5M-hC5"/>
+                            <constraint firstAttribute="bottom" secondItem="tGW-oA-Lyl" secondAttribute="bottom" id="ShR-qQ-yef"/>
+                            <constraint firstItem="tGW-oA-Lyl" firstAttribute="leading" secondItem="hfK-iK-DKF" secondAttribute="leading" id="UAm-Cr-we8"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="hfK-iK-DKF"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="tGW-oA-Lyl" id="aIw-HX-uXq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LSe-9I-cGn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3464" y="360"/>
         </scene>
-        <!--Page View Controller-->
+        <!--Buy Page View Controller-->
         <scene sceneID="dgF-Pn-Sta">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="mIu-8w-X5z" sceneMemberID="viewController"/>
+                <pageViewController storyboardIdentifier="BuyPageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="mIu-8w-X5z" customClass="BuyPageViewController" customModule="YoursMine" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B6O-PN-QoX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1672" y="-272"/>
@@ -288,6 +360,9 @@
         <image name="arrowtriangle.down.square" catalog="system" width="128" height="114"/>
         <namedColor name="DarkBrown">
             <color red="0.21568627450980393" green="0.13725490196078433" blue="0.035294117647058823" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="LightYellowColor">
+            <color red="1" green="0.92941176470588238" blue="0.7686274509803922" alpha="0.40000000596046448" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="TextColor">
             <color red="0.37299999594688416" green="0.24699999392032623" blue="0.13699999451637268" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
