--- a/YoursMine/YoursMine/니꺼사기/BuyingTab.storyboard
+++ b/YoursMine/YoursMine/니꺼사기/BuyingTab.storyboard
@@ -29,12 +29,12 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="60"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x4c-KD-mvo">
-                                        <rect key="frame" x="0.0" y="0.0" width="140" height="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="120" height="60"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명동 사옥" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MNL-7a-Oc2">
                                                 <rect key="frame" x="15" y="10" width="68.5" height="40"/>
                                                 <fontDescription key="fontDescription" name="NanumBarunGothicBold" family="NanumBarunGothic" pointSize="18"/>
-                                                <color key="textColor" name="TextColor"/>
+                                                <color key="textColor" red="0.37254901960784315" green="0.24705882352941178" blue="0.13725490196078433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowtriangle.down.square" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="gBx-Ci-Zdc">
@@ -42,14 +42,14 @@
                                                 <color key="tintColor" name="TextColor"/>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H1i-dL-LsP">
-                                                <rect key="frame" x="0.0" y="0.0" width="140" height="60"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="120" height="60"/>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="gBx-Ci-Zdc" firstAttribute="centerY" secondItem="MNL-7a-Oc2" secondAttribute="centerY" id="6Qz-uV-jai"/>
                                             <constraint firstAttribute="bottom" secondItem="MNL-7a-Oc2" secondAttribute="bottom" constant="10" id="Caq-2g-3t5"/>
-                                            <constraint firstAttribute="width" constant="140" id="DcM-mK-Cmk"/>
+                                            <constraint firstAttribute="width" constant="120" id="DcM-mK-Cmk"/>
                                             <constraint firstItem="H1i-dL-LsP" firstAttribute="leading" secondItem="x4c-KD-mvo" secondAttribute="leading" id="JbZ-cS-W9b"/>
                                             <constraint firstItem="MNL-7a-Oc2" firstAttribute="top" secondItem="x4c-KD-mvo" secondAttribute="top" constant="10" id="Jzp-15-t6o"/>
                                             <constraint firstItem="gBx-Ci-Zdc" firstAttribute="leading" secondItem="MNL-7a-Oc2" secondAttribute="trailing" constant="8" id="M1b-XP-jAn"/>
@@ -60,19 +60,42 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ff2-6f-m3O">
-                                        <rect key="frame" x="140" y="0.0" width="274" height="60"/>
+                                        <rect key="frame" x="120" y="0.0" width="294" height="60"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AKc-m5-nOb">
-                                                <rect key="frame" x="0.0" y="0.0" width="274" height="60"/>
-                                                <state key="normal" title="검색"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="H2o-9g-t84">
+                                                <rect key="frame" x="0.0" y="12.5" width="249" height="35"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="35" id="75t-h7-1HY"/>
+                                                </constraints>
+                                                <color key="textColor" red="0.37254901959999998" green="0.2470588235" blue="0.13725490200000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="search" translatesAutoresizingMaskIntoConstraints="NO" id="BF7-2Y-I3P">
+                                                <rect key="frame" x="264" y="20" width="20" height="20"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="20" id="JVb-fU-CYR"/>
+                                                    <constraint firstAttribute="height" constant="20" id="WXF-Tl-Mkq"/>
+                                                </constraints>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AKc-m5-nOb">
+                                                <rect key="frame" x="0.0" y="0.0" width="294" height="60"/>
+                                                <connections>
+                                                    <action selector="searchButtonTapped:" destination="TW1-xz-aDB" eventType="touchUpInside" id="Czr-Kh-KcJ"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="AKc-m5-nOb" firstAttribute="leading" secondItem="ff2-6f-m3O" secondAttribute="leading" id="8dQ-LE-hbd"/>
                                             <constraint firstItem="AKc-m5-nOb" firstAttribute="top" secondItem="ff2-6f-m3O" secondAttribute="top" id="8eJ-hh-la0"/>
+                                            <constraint firstItem="BF7-2Y-I3P" firstAttribute="centerY" secondItem="ff2-6f-m3O" secondAttribute="centerY" id="Msl-ko-nfX"/>
+                                            <constraint firstItem="H2o-9g-t84" firstAttribute="leading" secondItem="ff2-6f-m3O" secondAttribute="leading" id="O0P-uL-m6k"/>
+                                            <constraint firstItem="H2o-9g-t84" firstAttribute="centerY" secondItem="ff2-6f-m3O" secondAttribute="centerY" id="Onv-Ov-Wct"/>
+                                            <constraint firstItem="BF7-2Y-I3P" firstAttribute="leading" secondItem="H2o-9g-t84" secondAttribute="trailing" constant="15" id="QNj-Ps-PwL"/>
                                             <constraint firstAttribute="trailing" secondItem="AKc-m5-nOb" secondAttribute="trailing" id="WNo-vc-o1R"/>
                                             <constraint firstAttribute="bottom" secondItem="AKc-m5-nOb" secondAttribute="bottom" id="jeX-gp-R8r"/>
-                                            <constraint firstItem="AKc-m5-nOb" firstAttribute="leading" secondItem="ff2-6f-m3O" secondAttribute="leading" id="jyB-D4-xMU"/>
+                                            <constraint firstAttribute="trailing" secondItem="BF7-2Y-I3P" secondAttribute="trailing" constant="10" id="kjK-Oq-R9C"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -194,9 +217,66 @@
                     <navigationItem key="navigationItem" id="B7s-1f-KhX"/>
                     <connections>
                         <outlet property="categoryCollectionView" destination="mYL-Yb-iX4" id="2Jb-ha-2bI"/>
+                        <outlet property="searchView" destination="R0L-lq-FIg" id="bU0-eU-H02"/>
+                        <outlet property="textField" destination="EMa-b6-Bap" id="Zzh-mP-efd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZAs-0v-JkH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="R0L-lq-FIg">
+                    <rect key="frame" x="0.0" y="0.0" width="377" height="395"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tjS-du-XdJ">
+                            <rect key="frame" x="0.0" y="44" width="377" height="55"/>
+                            <subviews>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="검색어, #태그로 검색" minimumFontSize="15" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="EMa-b6-Bap">
+                                    <rect key="frame" x="20" y="10" width="297" height="35"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="35" id="A7o-WT-gUT"/>
+                                    </constraints>
+                                    <color key="textColor" red="0.37254901959999998" green="0.2470588235" blue="0.13725490200000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="15"/>
+                                        </userDefinedRuntimeAttribute>
+                                    </userDefinedRuntimeAttributes>
+                                    <connections>
+                                        <outlet property="delegate" destination="TW1-xz-aDB" id="DJ9-i9-jQ7"/>
+                                    </connections>
+                                </textField>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hyi-U2-y61">
+                                    <rect key="frame" x="319" y="0.0" width="56" height="55"/>
+                                    <state key="normal" title="취소">
+                                        <color key="titleColor" name="DarkBrown"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="cancelSearchButtonTapped:" destination="TW1-xz-aDB" eventType="touchUpInside" id="frR-IK-tRY"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="EMa-b6-Bap" firstAttribute="leading" secondItem="tjS-du-XdJ" secondAttribute="leading" constant="20" id="8kA-8J-ABp"/>
+                                <constraint firstItem="Hyi-U2-y61" firstAttribute="top" secondItem="tjS-du-XdJ" secondAttribute="top" id="FfQ-Jh-dPI"/>
+                                <constraint firstAttribute="bottom" secondItem="EMa-b6-Bap" secondAttribute="bottom" constant="10" id="RuC-Uw-4er"/>
+                                <constraint firstAttribute="trailing" secondItem="EMa-b6-Bap" secondAttribute="trailing" constant="60" id="YOp-9Y-ICc"/>
+                                <constraint firstAttribute="trailing" secondItem="Hyi-U2-y61" secondAttribute="trailing" constant="2" id="bJh-tQ-0wN"/>
+                                <constraint firstItem="EMa-b6-Bap" firstAttribute="top" secondItem="tjS-du-XdJ" secondAttribute="top" constant="10" id="gvi-of-uHD"/>
+                                <constraint firstItem="Hyi-U2-y61" firstAttribute="leading" secondItem="EMa-b6-Bap" secondAttribute="trailing" constant="2" id="h17-b2-by5"/>
+                                <constraint firstAttribute="bottom" secondItem="Hyi-U2-y61" secondAttribute="bottom" id="svM-JJ-1MS"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstItem="tjS-du-XdJ" firstAttribute="top" secondItem="cHu-Pr-ZUq" secondAttribute="top" id="PdW-qQ-SoJ"/>
+                        <constraint firstItem="tjS-du-XdJ" firstAttribute="leading" secondItem="R0L-lq-FIg" secondAttribute="leading" id="onJ-7A-OVD"/>
+                        <constraint firstItem="cHu-Pr-ZUq" firstAttribute="trailing" secondItem="tjS-du-XdJ" secondAttribute="trailing" id="rxK-Yz-h2b"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="cHu-Pr-ZUq"/>
+                </view>
             </objects>
             <point key="canvasLocation" x="834.78260869565224" y="-315.40178571428572"/>
         </scene>
@@ -358,6 +438,7 @@
     </scenes>
     <resources>
         <image name="arrowtriangle.down.square" catalog="system" width="128" height="114"/>
+        <image name="search" width="32" height="32"/>
         <namedColor name="DarkBrown">
             <color red="0.21568627450980393" green="0.13725490196078433" blue="0.035294117647058823" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
